# fastapi-base

./: .gitignore  Dockerfile  README.md  alembic.ini  alembic_commands.py  docker-compose.yaml  generate_er_diagram.py  grafana-datasources.yaml  package-lock.json  package.json  pyproject.toml  seed.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  setup.sh
.github/workflows/: ci.yaml
api/: app.py  database.py  settings.py
app/: alembic.ini  config.py  main.py
app/api/: main.py
app/api/routes/: actor.py  address.py  auth.py  movie.py
app/core/: config.py  database.py  limiter.py  logger.py  security.py  telemetry.py
app/migrations/: env.py
app/migrations/versions/: 2024-08-22_create_tables_first_version.py  2024-08-23_create_tables_first_version.py  2024-09-06_adds_user_table.py
app/models/: __init__.py  actor.py  actor_movie.py  address.py  base.py  movie.py  user.py
app/schemas/: __init__.py  actor.py  address.py  movie.py  user.py
observability/: grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml
tests/: conftest.py  main_test.py  test_database.py  test_main.py
tests/api/routes/: test_actor.py  test_address.py  test_auth.py  test_movie.py
tests/core/: test_config.py
tests/main/: test_main.py
