[project]
name = "fastapi-base"
version = "0.1.0"
description = "Base project for FastAPI projects"
authors = [
    {name = "Jose Assis",email = "josenunesra@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "redis (>=6.2.0,<7.0.0)",
    "opentelemetry-distro (>=0.55b1,<0.56)",
    "opentelemetry-exporter-otlp (>=1.34.1,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.55b1,<0.56)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)"
]

[project.urls]
repository = "https://github.com/josejnra/fastapi-base"
homepage = "https://github.com/josejnra/fastapi-base"
documentation = "https://github.com/josejnra/fastapi-base"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.extras]
dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.1.1"
pytest-asyncio = "^1.0.0"
mypy = "^1.16.0"
faker = {extras = ["postalcode"], version = "^37.3.0"}
taskipy = "^1.14.1"
ruff = "^0.11.13"
aiosqlite = "^0.21.0"
sqlalchemy-data-model-visualizer = "^0.1.3"
graphviz = "^0.20.3"
types-passlib = "^1.7.7.20250602"
types-python-dateutil = {version = "^2.9.0.20250516", optional = true}
types-pytz = {version = "^2025.2.0.20250516", optional = true}
types-pyyaml = {version = "^6.0.12.20250516", optional = true}

[tool.ruff]
line-length = 88
extend-exclude = ["migrations"]
cache-dir = "/tmp/.ruff_cache"
exclude = ["alembic"]

[tool.ruff.lint]
preview = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "PL",  # pylint
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
docstring-code-format = true

[tool.mypy]
exclude = [
    "migrations",
    "test_redis_async.py",
    "generate_er_diagram.py"
]
cache_dir = "/tmp/.mypy_cache"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = "task lint"
test = "pytest --cov --cov-branch --cov-fail-under=75 --cov-report term --cov-report xml:coverage.xml"
post_test = "coverage html && mypy ."
run = "fastapi dev app/main.py --port 8000"

[tool.pytest.ini_options]
cache_dir = "/tmp/.pytest_cache"
addopts = "-s -x -vv"
testpaths = [
    "tests"
]
asyncio_mode = "auto"

[tool.coverage.html]
directory = "/tmp/htmlcov"

